# backend/internal/api/user/handler.go
@@ -15,6 +15,26 @@ func NewHandler(service *coreUser.Service) *Handler {
 	return &Handler{service: service}
 }
 
+// @TODO remove
+type userResponse struct {
+	UserID string `json:"userID"`
+	Email  string `json:"email"`
+}
+
+type errorResponse struct {
+	Code    int    `json:"code"`
+	Message string `json:"message"`
+}
+
+// User godoc
+// @Summary      User
+// @Description  get user info
+// @Tags         Users
+// @Produce      json
+// @Success      200  {object}  userResponse
+// @Failure      401  {object}  errorResponse
+// @Security     ApiKeyAuth
+// @Router       /user [get]
 func (h Handler) UserHandler(c *gin.Context) {
 	claims := jwt.ExtractClaims(c)
 	user, _ := c.Get(auth.IdentityKey)
